# edn-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REUSE.toml
.github/: copilot-instructions.md  copilot-instructions.md.license
.github/workflows/: ci.yml
cmake/: Sanitizers.cmake  edn-cpp-config.cmake.in
include/edn/: builtins.hpp  emitter.hpp  parser.hpp  value.hpp
scripts/: pre-commit
src/: builtins.cpp  emitter.cpp  intern.cpp  parser.cpp  value.cpp
tests/: CMakeLists.txt  test_emitter.cpp  test_parser.cpp  test_value.cpp
